# notes-plus

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml
app/: .gitignore  bunfig.toml  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
app/src/: app.css  app.html  mocha.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: data.rs  io.rs  jot_down.rs  lifecycle.rs  load.rs  mod.rs  notes.rs  prefs.rs  quit.rs  settings.rs  view_window.rs
app/src-tauri/src/events/: mod.rs
app/src-tauri/src/structs/: app_state.rs  error.rs  mod.rs  open_data.rs  settings.rs
app/src-tauri/src/util/: app_handle.rs  dialog.rs  display_error.rs  export_bindings.rs  handle_args.rs  handle_drag_drop.rs  mod.rs
app/src/lib/canvas/: BlockManager.svelte.ts  CanvasManager.svelte.ts  LayerManager.svelte.ts  OutlineBuilder.svelte.ts  Page.svelte.ts  PageManager.svelte.ts  StrokeBuilder.svelte.ts  StrokeEraser.ts  StrokeManager.svelte.ts
app/src/lib/classes/: InputThrottler.ts  OutlineBuilder.svelte.ts  StrokeBuilder.svelte.ts  strokeBuilder.svelte.ts
app/src/lib/components/: Canvas.svelte  ColorEditPopup.svelte  ColorInput.svelte  ColorPicker.svelte  ColorSwatch.svelte  DropOverlay.svelte  EditorBar.svelte  FileBrowser.svelte  FolderPicker.svelte  Input.svelte  JotDown.svelte  Modals.svelte  NewNote.svelte  NoteSettings.svelte  NotebookSettings.svelte  Overlay.svelte  PageSettings.svelte  Popups.svelte  Prefs.svelte  Tabs.svelte  Toolbar.svelte  Unsaved.svelte  UnsavedClose.svelte
app/src/lib/editor/: BackgroundPatterns.svelte  LassoMenu.svelte  LassoSelection.svelte  PenToolbar.svelte  ToolCursor.svelte  Toolbar.svelte  ZoomIndicator.svelte  canvasController.svelte.ts  shortcuts.svelte.ts  svg.ts
app/src/lib/editor/state/: canvasManager.svelte.ts  lassoManager.svelte.ts
app/src/lib/editor/tools/: erase.test.ts  erase.ts  lasso.ts
app/src/lib/functions/: canvas.ts  stroke.ts
app/src/lib/state/: contentManager.svelte.ts  defaultsStore.svelte.ts  editorComponents.svelte.ts  fsStore.svelte.ts  jotStore.svelte.ts  overlayManager.svelte.ts  popupManager.svelte.ts  settingsStore.svelte.ts  tabManager.svelte.ts
app/src/lib/tabs/: tabs.svelte.ts
app/src/lib/types/: canvas.ts  tabs.ts
app/src/lib/util/: canvasBounds.ts  canvasExport.ts  colors.ts  deepFreeze.ts  dialog.ts  erase.ts  fileSystem.svelte.ts  fileSystem.ts  fuzzySearch.ts  geometry.ts  getSvgPathFromStroke.ts  notes.svelte.ts  notes.ts  store.svelte.ts  timeout.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/(dashboard)/: +layout.svelte  +page.svelte
app/src/routes/edit/: +page.svelte  +page.ts
app/src/routes/edit/[id]/: +layout.svelte  +page.svelte
app/src/routes/edit/[path]/: +page.server.ts  +page.ts
app/src/routes/test/: +page.svelte
app/src/routes/test/new/: +page.svelte
common/: Cargo.toml
common/src/: io.rs  lib.rs
common/src/file/: io.rs
common/src/io/: archive.rs  data.rs  index.rs  mod.rs  organize_index.rs
common/src/structs/: blocks.rs  defaults.rs  file_data.rs  file_meta.rs  mod.rs  note.rs  user_prefs.rs
common/src/structs/data/: content.rs  meta.rs  mod.rs  note.rs  state.rs
common/src/util/: is_rnpf.rs  mod.rs
src/: app.html
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/structs/: blocks.rs  file_data.rs
src/lib/components/: Canvas.svelte
src/lib/types/: canvas.ts
