[package]
name = "common"
version = "0.1.0"
edition = "2024"
authors = ["RedCrafter07"]
description = "Shared components for RedNotes Plus"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
flate2 = "1.1.9"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sevenz-rust2 = "0.21.0"
specta = { version = "2.0.0-rc.21", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4"] }
