[package]
name = "common"
version = "0.1.0"
edition = "2024"
authors = ["RedCrafter07"]
description = "Shared components for RedNotes Plus"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = { version = "3.21.0", features = ["json"] }
sevenz-rust2 = "0.21.0"
specta = { version = "2.0.0-rc.21", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4"] }
