[package]
name = "rednotes-plus"
version = "0.1.0"
description = "An svg-based note taking app"
authors = ["RedCrafter07"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rednotes_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
common = { path = "../../common" }
rmp-serde = "1.3.0"
zip = "4.3.0"
uuid = { version = "1.17.0", features = ["v4"] }
dirs = "6.0.0"
parking_lot = "0.12.4"
anyhow = "1.0.98"
thiserror = "2.0.12"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
